<resources>
    <string name="app_name">FreedomBlog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_activity_guide">ActivityGuide</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- 欢迎界面string-->
    <string name="welcome_image">欢迎界面的图片</string>
    <!-- 主页string-->
    <string name="index_actionbar">"主页"</string>
    <string name="index_index">主页</string>
    <string name="index_attention">关注</string>
    <string name="index_me">我的</string>
    <string name="index_comment">记录</string>
    <!-- 侧滑栏string-->
    <string name="nav_index">主页</string>
    <string name="nav_sort">分类</string>
    <string name="group_other">其他</string>
    <string name="nav_theme">主题</string>
    <string name="nav_set">设置</string>
    <string name="nav_about">关于</string>
    <string name="nav_exit">退出</string>
    <!-- 个人fragment string-->
    <string name="person_islogin">登陆/注册</string>
    <string name="group_attention">关注(0)</string>
    <string name="group_fans">粉丝(0)</string>
    <string name="group_book">文章(0)</string>
    <string name="group_love">喜欢</string>
    <string name="group_num">0</string>
    <string name="group_share">分享</string>
    <string name="group_comment">评论</string>
    <string name="group_collect">收藏</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="title_activity_user_index">UserIndexActivity</string>
    <string name="title_activity_sortctivity">Sortctivity</string>
<!--登陆界面-->
    <string name="sub_edittext_username">邮箱/手机号</string>
    <string name="sub_edittext_password">密码</string>
    <string name="button_login">登陆</string>
    <string name="textview_prompt">使用其他方式登陆</string>
    <string name="register_blog">注册博客</string>
<!--注册界面 -->
    <string name="register_edittext_username">昵称</string>
    <string name="edittext_email_phonenumber">邮箱或手机号</string>
    <string name="button_register">注册</string>
    <string name="input_type">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@1234567890.</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
