<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_index"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/nav_index" />
        <item
            android:id="@+id/nav_sort"
            android:icon="@drawable/ic_assignment_white_18dp"
            android:title="@string/nav_sort" />
    </group>

    <item android:title="@string/group_other">
        <menu>
            <item
                android:id="@+id/nav_set"
                android:icon="@drawable/ic_settings_white_18dp"
                android:title="@string/nav_set" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_white_18dp"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_white_18dp"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
