<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sub_edittext_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/input_type"
            android:hint="@string/sub_edittext_username"
            android:maxLength="48"
            android:saveEnabled="false"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sub_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_edittext_username"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_edittext_password"
            android:inputType="textPassword"
            android:maxLength="48"
            android:saveEnabled="false"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        android:text="@string/button_login"
        android:textColor="@color/white"
        android:layout_below="@+id/sub_edittext_password"
        android:background="@drawable/shape_login"
        android:layout_marginTop="@dimen/pading_top"
        android:textSize="18sp"
        />

</RelativeLayout>