<?xml version="1.0" encoding="utf-8"?>
<com.smartydroid.android.starter.kit.widget.ForegroundRelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:fresco="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginStart="@dimen/activity_horizontal_margin"
		android:background="@android:color/white"
		android:foreground="?attr/selectableItemBackground"
		android:paddingTop="@dimen/activity_horizontal_margin"
>

	<RelativeLayout
			android:id="@+id/header"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
	>

		<com.facebook.drawee.view.SimpleDraweeView
				android:id="@+id/home_avatar"
				android:layout_width="@dimen/home_avatar_size"
				android:layout_height="@dimen/home_avatar_size"
				android:background="@drawable/placeholder_avatar"
				fresco:placeholderImage="@drawable/ic_avatar_default"
				fresco:placeholderImageScaleType="centerCrop"
				fresco:roundAsCircle="true"
		/>

		<TextView
				android:id="@+id/username"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toEndOf="@+id/home_avatar"
				android:layout_toRightOf="@+id/home_avatar"
				android:padding="@dimen/activity_horizontal_margin"
				android:text="@string/app_name"
		/>
	</RelativeLayout>

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/header"
	>

		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_vertical_padding"
				android:layout_marginLeft="@dimen/activity_vertical_padding"
				android:layout_marginStart="@dimen/activity_vertical_padding"
				android:layout_toEndOf="@+id/home_image"
				android:layout_toRightOf="@+id/home_image"
		>
			<TextView
					android:id="@+id/title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:maxLines="3"
					android:singleLine="false"
					android:textColor="@color/black"
					android:textSize="18sp"
			/>


			<org.jiangtao.widget.ForBitClickRichEditor
					android:id="@+id/content"
					android:layout_width="200dp"
					android:layout_height="56dp"
					android:layout_below="@+id/title"
					android:maxLines="3"
					android:paddingTop="@dimen/activity_vertical_padding"
					android:singleLine="false"
			/>

			<TextView
					android:id="@+id/time"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true"
					android:layout_below="@+id/content"
					android:layout_marginTop="@dimen/activity_horizontal_margin"
					android:singleLine="true"
					android:text="@string/nav_about"
			/>

			<TextView
					android:id="@+id/read_num"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/content"
					android:layout_marginTop="@dimen/activity_horizontal_margin"
					android:singleLine="true"
					android:text="@string/nav_set"
			/>
		</RelativeLayout>
		<com.facebook.drawee.view.SimpleDraweeView
				android:id="@+id/home_image"
				android:layout_width="160dp"
				android:layout_height="120dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"
				android:paddingBottom="@dimen/activity_vertical_padding"
				fresco:placeholderImage="@drawable/ic_article_image"
		/>

	</RelativeLayout>

</com.smartydroid.android.starter.kit.widget.ForegroundRelativeLayout>