<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.jiangtao.freedomblog.ActivityIndex"
    tools:showIn="@layout/app_bar_activity_index"
    >

  <FrameLayout
      android:id="@+id/container_index"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      />

  <ImageView
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_above="@+id/index_ll"
      android:background="@color/LightGrey"
      />

  <LinearLayout
      android:id="@+id/index_ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_gravity="bottom"
      android:orientation="horizontal"
      android:weightSum="5"
      >

    <RelativeLayout
        android:id="@+id/index_fragment_choice_index"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="onClick"
        >

      <ImageView
          android:id="@+id/index_fragment_index_imageview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:src="@drawable/home"
          />

      <TextView
          android:id="@+id/index_fragment_index_textview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/index_fragment_index_imageview"
          android:layout_centerHorizontal="true"
          android:clickable="true"
          android:contentDescription="@string/index_actionbar"
          android:drawablePadding="0dp"
          android:onClick="onClick"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:text="@string/index_index"
          android:textColor="@color/text_tab_color"
          android:textSize="@dimen/index_text_size"
          android:textStyle="bold"
          android:paddingBottom="5dp"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/index_fragment_choice_attention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="onClick"
        >

      <ImageView
          android:id="@+id/index_fragment_attention_imageview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:src="@drawable/bible"
          />

      <TextView
          android:id="@+id/index_fragment_attention"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/index_fragment_attention_imageview"
          android:layout_centerHorizontal="true"
          android:clickable="true"
          android:contentDescription="@string/index_actionbar"
          android:onClick="onClick"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:text="@string/index_attention"
          android:textColor="@color/text_tab_color"
          android:textSize="@dimen/index_text_size"
          android:textStyle="bold"
          android:paddingBottom="5dp"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/index_fragment_choice_pupopmenu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="onClick"
        >

      <ImageView
          android:id="@+id/index_fragment_pupopmenu"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:contentDescription="@string/index_actionbar"
          android:src="@drawable/circle"
          />

      <TextView
          android:id="@+id/index_fragment_send"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/index_fragment_pupopmenu"
          android:layout_centerHorizontal="true"
          android:contentDescription="@string/index_actionbar"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:text="@string/index_fragment_pupopmenu"
          android:textColor="@color/text_tab_color"
          android:textSize="@dimen/index_text_size"
          android:textStyle="bold"
          android:clickable="true"
          android:paddingBottom="5dp"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/index_fragment_choice_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="onClick"
        >

      <ImageView
          android:id="@+id/index_fragment_prompt_imageview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:src="@drawable/message"
          />

      <TextView
          android:id="@+id/index_fragment_prompt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/index_fragment_prompt_imageview"
          android:layout_centerHorizontal="true"
          android:clickable="true"
          android:contentDescription="@string/index_actionbar"
          android:gravity="center"
          android:onClick="onClick"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:text="@string/index_comment"
          android:textColor="@color/text_tab_color"
          android:textSize="@dimen/index_text_size"
          android:textStyle="bold"
          android:paddingBottom="5dp"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/index_fragment_choice_person"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="onClick"
        >

      <ImageView
          android:id="@+id/index_fragment_person_imageview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:src="@drawable/mine"
          />

      <TextView
          android:id="@+id/index_fragment_person"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/index_fragment_person_imageview"
          android:layout_centerHorizontal="true"
          android:contentDescription="@string/index_actionbar"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:text="@string/index_me"
          android:textColor="@color/text_tab_color"
          android:textSize="@dimen/index_text_size"
          android:textStyle="bold"
          android:paddingBottom="5dp"
          />
    </RelativeLayout>
  </LinearLayout>
</RelativeLayout>
